ganti url image

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- Common Tag -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:image" content="/assets/images/bg.jpeg" />
     <title>Website Undangan Pernikahan Angga dan Ismi</title>
 
     <!-- Preconnect and preload CDN -->
